<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appliance"
            android:icon="@drawable/ic_appliance"
            android:title="@string/appliances" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_device"
            android:title="@string/devices_manage" />
        <item
            android:id="@+id/nav_ir_record"
            android:icon="@drawable/ic_record_ir"
            android:title="@string/record_ir" />
<!--        <item-->
<!--            android:id="@+id/nav_rf_record"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/record_rf" />-->
    </group>

    <item android:title="Communicate">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
